<resources>
    <string name="app_name">FaraSense</string>
    <string name="error_network_timeout_title">Connection timeout</string>
    <string name="error_network_timeout_message">Connection timeout.</string>
    <string name="error_network_title">Connection failed</string>
    <string name="error_network_message">Error tring to connect the server</string>
    <string name="error_unknown_error_title">An unknown error occurred. Try again in a while.</string>
    <string name="error_unknown_error_message">>An unknown error occurred. Try again in a while.</string>
    <string name="error_no_connection_message">Please verify your Internet connection and try again.</string>
    <string name="error_downloading_message">There was a problem downloading the data. Try again later</string>
    <string name="sensor_id_label">FaraSense Enterprise 1</string>
    <string name="menu_search_title">Search</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="hour">1 Hour</string>
    <string name="thirty_minutes">30 min</string>
    <string name="five_minutes">5 min</string>
    <string name="title_real_time_consumption">Real time consumption:</string>
    <string name="title_consumption_label">This is their consumption:</string>
    <string name="title_last_consumption_label">Most Recent History:</string>
    <string name="loading">Loading data...</string>
    <string name="kilowatts">Kilowatts</string>
    <string name="description_hour_chart">Hourly</string>
    <string name="description_thirty_chart">Every 30 minutes</string>
    <string name="description_five_chart">De 5 em 5 minutos</string>
    <string name="description_daily_chart">Day by day</string>
    <string name="description_monthly_chart">Monthly by monthly</string>
    <string name="description_yearly_chart">Year by year</string>
    <string name="title_cost_consumption_label">Estimated Monthly Expense</string>
    <string name="alert_empty_or_value_invalid">Invalid or empty Kwh rate value! Try again.</string>
    <string name="alert_save_sucess">Opções salvas com sucesso!</string>
    <string name="alert_gps_accept">Accept</string>
    <string name="alert_gps_exit">Exit</string>
    <string name="aler_gps_message">To access FaraSense Mobile, it is necessary to activate the GPS to locate the sensors.</string>
    <string name="ble_off">Bluetooth off.</string>
    <string name="ble_off_message">Try turning on Bluetooth on your device.</string>
    <string name="ble_try">Looking for sensor…</string>
    <string name="ble_connected">Connected.</string>
    <string name="ble_disconnected">Disconnected.</string>
    <string name="ble_initializing">Initializing…</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="ble_service_off">Servico off</string>
    <string name="ble_scan_error">Device Not Found</string>
    <string name="cost_first_message">Enter rates</string>
    <string name="indicator_sensitivity_label">Select the sensitivity of the current indicator in real time:</string>
    <string name="minimum_sensitivity_label">10 A</string>
    <string name="maximum_sensitivity_label">30 A</string>
</resources>
