<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_chart_outer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            style="@style/ChartCardView">

            <farasense.mobile.view.components.NonSwipeableViewPager
                android:id="@+id/chart_consumption_container"
                android:layout_width="match_parent"
                android:layout_height="185dp"/>

            <android.support.design.widget.AppBarLayout
                android:id="@+id/consumption_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/include_toolbar"
                android:layout_gravity="bottom"
                android:background="@drawable/shape_background_tab">

                <android.support.design.widget.TabLayout
                    android:id="@+id/consumption_chart_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabIndicatorColor="@color/colorAccent"
                    app:tabIndicatorFullWidth="false"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/whiteOpacity">

                    <android.support.design.widget.TabItem
                        android:id="@+id/consumption_tab_item_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daily" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/consumption_tab_item_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/consumption_tab_item_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yearly" />

                </android.support.design.widget.TabLayout>
            </android.support.design.widget.AppBarLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</layout>