<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:id="@+id/consumption_cost_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/ChartCardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_double_margin"
                android:layout_marginBottom="@dimen/element_double_margin">

                <TextView
                    android:id="@+id/maturity_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/element_margin"
                    android:layout_marginEnd="@dimen/element_margin"
                    android:fontFamily="sans-serif"
                    android:text="@string/aler_gps_message"
                    tools:text="@string/aler_gps_message" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_margin"
                android:layout_marginEnd="@dimen/element_margin" >

                <Button
                    android:id="@+id/button_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/element_quadriple_padding"
                    android:layout_toLeftOf="@id/button_accept"
                    android:background="@color/transparent"
                    android:text="@string/alert_gps_exit"
                    android:textColor="@color/colorTabBar"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/element_half_margin"/>

                <Button
                    android:id="@+id/button_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/element_quadriple_padding"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:text="@string/alert_gps_accept"
                    android:textColor="@color/colorTabBar"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>